[package]
name = "repoforge"
version = "0.7.1"
edition = "2021"
rust-version = "1.74"
description = "Audit GitHub repositories against a quality rubric and auto-generate the missing pieces (README, license, CI, .gitignore, topics)."
license = "MIT"
repository = "https://github.com/andreaisabelmontana/repoforge"
keywords = ["github", "cli", "audit", "automation", "quality"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "repoforge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
base64 = "0.22"
toml = "0.8"
colored = "2"
comfy-table = "7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
